<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/doctor"
    tools:context="com.example.pillz.Activities.CreateAccount">

    <ProgressBar
        android:id="@+id/loadingSpinner"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">
            <RelativeLayout
                android:layout_marginTop="50dp"
                android:id="@+id/logoContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:background="@drawable/rounded_corners_rectangle"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:src="@drawable/pillz"
                    android:scaleType="centerInside"
                    android:tint="@color/colorAccent" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/createAccount"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="40dp"
                android:paddingStart="40dp">
                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:hint="@string/firstName"
                    android:inputType="textCapWords"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="40dp"
                android:paddingStart="40dp">
                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:hint="@string/lastName"
                    android:inputType="textCapWords"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="40dp"
                android:paddingStart="40dp">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="40dp"
                android:paddingStart="40dp">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="40dp"
                android:paddingStart="40dp">
                <EditText
                    android:id="@+id/confirm"
                    android:layout_width="match_parent"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/connectContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >
                <Button
                    android:id="@+id/createAccountButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit" />

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
