<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.MainActivity"
        android:background="@drawable/doctor">

    <ProgressBar
        android:id="@+id/loadingSpinner"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_marginTop="50dp"
        android:id="@+id/logoContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:background="@drawable/rounded_corners_rectangle"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:src="@drawable/pillz"
            android:scaleType="centerInside"
            android:tint="@color/colorAccent"
            />
    </RelativeLayout>

    <RelativeLayout android:id="@+id/usernameContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoContainer">
        <EditText
            android:id="@+id/userNameTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress" />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/passwordContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameContainer">
        <EditText
            android:id="@+id/passwordTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/connectContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordContainer">
        <Button
                android:id="@+id/connect"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect" />

    </RelativeLayout>
    <RelativeLayout
            android:foreground="?selectableItemBackgroundBorderless"
            android:id="@+id/createAccountContainer"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connectContainer">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/createAccount"/>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>